<resources>
    <string name="app_name">TripPlanner</string>
    <string name="facebook_app_id">1604248769819663</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navi_my_trip">我的旅程</string>

    <string name="action_edit">編輯</string>
    <string name="action_delete">刪除</string>
    <string name="action_done">完成</string>

    <string name="title_day">日程</string>
    <string name="title_attraction">景點</string>
    <string name="title_memo">備忘</string>

    <string name="title_create_trip">新增旅程</string>
    <string name="title_edit_trip">編輯旅程</string>
    <string name="title_trip_name">旅程名稱</string>
    <string name="title_trip_name_hint">例如：東京小旅行</string>
    <string name="title_destination">目的地</string>
    <string name="title_destination_hint">例如：北海道，巴黎</string>
    <string name="title_choose_photo">選擇一張圖片，讓行程更加繽紛</string>
    <string name="title_go_time">出發時間</string>
    <string name="title_back_time">回程時間</string>
    <string name="title_local_usage">不登入，我想直接使用</string>
    <string name="title_add_attraction">新增景點</string>
    <string name="title_attraction_name">景點名稱</string>
    <string name="title_attraction_hint">Google map搜尋的景點名稱不一定符合您的期待，您可以自行設定景點名稱</string>
    <string name="title_day_toolbar">第%d天</string>
    <string name="title_exist_attraction">已存景點</string>
    <string name="title_ok">確認</string>
    <string name="title_delete">刪除</string>
    <string name="title_cancel">取消</string>
    <string name="title_is_delete_stroke">刪除此行程？</string>
    <string name="title_is_delete_stroke_detail">刪除行程不會刪除景點資訊</string>
    <string name="title_edit_attraction">編輯景點名稱</string>
    <string name="title_stroke_time">行程時間</string>

    <string name="hint_login">建議登入帳號，您可以線上保存您的旅程，以及分享您的旅程 \n
        您也可以不登入，在本機端編輯您的旅程，日後再登入。
    </string>

    <string name="action_syncing">同步中...</string>

    <string name="result_create_trip_success">建立旅程成功</string>

    <string name="error_no_trip_name">要輸入旅程名稱才可以建立喔~</string>
    <string name="error_no_type">請選擇一個類別</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_stroke">addStrokeActivity</string>
</resources>
